# freebusy

./: .api-linter.yaml  .env  .gitattributes  .gitignore  README.md  app.go  buf.yaml  generateql.yaml  go.mod  go.sum  go.work  go.work.sum  justfile  main.go  pulse.toml
client/go/: go.mod  go.sum
client/python/: .coveragerc  MANIFEST.in  README.rst  noxfile.py  setup.py
client/typescript/: README.md  index.ts  package.json
client/typescript/types/: availability.ts  booking.ts  identity.ts  organisation.ts  promocode.ts  resource.ts  schedule.ts  shared.ts
cmd/migrate/: main.go
config/: config.go  config_test.go  freebusy.dev.toml  freebusy.release.toml  load.go  options.go
docker/envoy/: README.md  docker-compose.yaml  launch.yaml
docker/postgres/: docker-compose.yaml
docker/postgres/init-scripts/: create-freebusy-db.sql
hasura/: compose.yaml  supergraph.yaml
hasura/freebusy/: subgraph.yaml
hasura/freebusy/metadata/: BookingContacts.hml  BookingOccupancies.hml  BookingPriceComponents.hml  BookingResource.hml  BookingTimeWindows.hml  ChannelResource.hml  ChannelSyncStatuses.hml  ChannelUnitMappings.hml  CommonMoneys.hml  CommonPostalAddress.hml  DeleteBookingContactsById.hml  DeleteBookingMoneysById.hml  DeleteBookingOccupanciesById.hml  DeleteBookingTimeWindowsById.hml  DeleteChannelResourceById.hml  DeleteChannelSyncStatusesById.hml  DeleteChannelUnitMappingsById.hml  DeleteCommonMoneysById.hml  DeleteCommonPostalAddressById.hml  DeleteIdentityForeignerDetailsById.hml  DeleteIdentityGuestPreferencesById.hml  DeleteIdentityGuestsByBookingId.hml  DeleteIdentityGuestsById.hml  DeleteIdentityIdDocumentsById.hml  DeleteIdentityUsersById.hml  DeleteOrganisationMembersById.hml  DeleteOrganisationResourceById.hml  DeletePromocodeApplicableOfferingsById.hml  DeletePromocodeApplicableResourcesById.hml  DeletePromocodeDiscountsById.hml  DeletePromocodeRedemptionWindowsById.hml  DeletePromocodeRedemptionsById.hml  DeletePromocodeScopeApplicableOfferingsById.hml  DeletePromocodeScopeApplicablePropertiesById.hml  DeletePromocodeScopeApplicableResourcesById.hml  DeletePromocodeScopeApplicableUnitsById.hml  DeletePromocodeScopesById.hml  DeletePromocodeUsageLimitsById.hml  DeletePropertyFeesById.hml  DeletePropertyLicencesById.hml  (+205 more)
internal/: runtime.go  server.go  service.go  validate.go  validate_test.go
internal/database/: connection.go  factory.go  open.go  pool.go  pool_test.go
internal/database/gorm/: promocode_convert.go  promocode_convert_test.go  promocode_filter.go  promocode_mask.go  promocode_order.go  promocode_order_test.go  promocode_read.go  promocode_repository.go  promocode_write.go
internal/database/hasura/: hasura.go  promocode_convert.go  promocode_order.go  promocode_patch.go  promocode_repository.go  promocode_write.go
internal/database/repository/: fieldmask.go  names.go  names_test.go  ordering.go  ordering_test.go  paging.go  repository.go
internal/discount/: discount.go  discount_test.go
internal/e2e/: exception_smoke_test.go  helpers_test.go  mcp_e2e_test.go  repository_smoke_test.go  server_booking_flow_test.go  server_e2e_test.go  server_hold_expiry_test.go  server_org_flow_test.go  server_property_flow_test.go
internal/hasura/: compose.yaml  supergraph.yaml
internal/hasura/.hasura/: context.yaml
internal/runtime/: runtime.go
internal/runtime/availability/: availability.go  observability.go  period.go  search.go
internal/runtime/booking/: booking.go  guests.go  observability.go  sweeper.go
internal/runtime/idempotency/: idempotency.go
internal/runtime/identity/: identity.go  observability.go
internal/runtime/organisation/: observability.go  organisation.go
internal/runtime/promocode/: create.go  observability.go  promocode.go  validate.go
internal/runtime/property/: licence.go  observability.go  property.go  unit.go
internal/runtime/rpc/: rpc.go
internal/runtime/schedule/: observability.go  schedule.go
internal/service/: observability.go  promocode_service.go  promocode_validate.go
internal/service/dbutil/: dbutil.go
internal/service/promocode/: resolve.go
internal/types/: errors.go  fieldmask.go  filter.go  filter_test.go  filterx.go  list.go  names.go  names_resources.go  names_test.go  ordering_test.go  types.go
protobuf/: README.md  go.mod  go.sum
protobuf/freebusy/availability/: README.md
protobuf/freebusy/availability/v1/: BUILD.bazel  availability.proto  availability_service.proto  enums.proto
protobuf/freebusy/booking/: README.md
protobuf/freebusy/booking/v1/: BUILD.bazel  booking.proto  booking_actions.proto  booking_mcp.proto  booking_messages.proto  booking_service.proto  enums.proto
protobuf/freebusy/channel/: README.md
protobuf/freebusy/channel/v1/: BUILD.bazel  channel.proto  channel_messages.proto  channel_service.proto  enums.proto
protobuf/freebusy/identity/: README.md
protobuf/freebusy/identity/v1/: BUILD.bazel  enums.proto  guest.proto  identity.proto  identity_service.proto
protobuf/freebusy/organisation/: README.md
protobuf/freebusy/promocode/: README.md
protobuf/freebusy/property/: README.md
protobuf/freebusy/property/v1/: BUILD.bazel  enums.proto  licence_service.proto  property.proto  property_mcp.proto  property_messages.proto  property_service.proto
protobuf/freebusy/resource/: README.md
protobuf/freebusy/schedule/: README.md
protobuf/freebusy/schedule/v1/: BUILD.bazel  enums.proto  schedule.proto  schedule_messages.proto  schedule_service.proto
protobuf/freebusy/shared/: README.md
protobuf/freebusy/shared/v1/: BUILD.bazel  enums.proto  idempotency.proto  options.proto  types.proto
shared/: config.go  pulse.go  pulse.toml
shared/rrule/: rrule.go  rrule_test.go
tools/db/hasura/: regen.sh
tools/just/: envoy.just  gen.just  grpc.just  hasura.just  promo.just
tools/lint/imports/: main.go
tools/protobuf/buf/: gapic.buf.gen.yaml  gen_descriptor.sh  go.buf.gen.yaml  orm.buf.gen.yaml  protorm.yaml  typescript.buf.gen.yaml
tools/protobuf/docs/: BUILD.bazel  main.go  parse.go  parse_file.go  render.go  summary.go
(+1740 files in other folders)
