load("@protobuf//bazel:proto_library.bzl", "proto_library")
load("@rules_go//go:def.bzl", "go_library")
load("@rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "availabilitypbv1_proto",
    srcs = [
        "availability.proto",
        "availability_service.proto",
    ],
    strip_import_prefix = "/protobuf",
    visibility = ["//visibility:public"],
    deps = [
        "//protobuf/freebusy/shared/v1:sharedpbv1_proto",
        "@googleapis//google/api:annotations_proto",
        "@googleapis//google/api:client_proto",
        "@googleapis//google/api:field_behavior_proto",
        "@googleapis//google/api:resource_proto",
        "@grpc_mcp_gateway//proto/mcp/protobuf:mcppb_proto",
        "@protobuf//:duration_proto",
        "@protobuf//:timestamp_proto",
    ],
)

go_proto_library(
    name = "availabilitypbv1_go_proto",
    compilers = [
        "@rules_go//proto:go_proto",
        "@rules_go//proto:go_grpc_v2",
    ],
    importpath = "github.com/oh-tarnished/freebusy/generated/go/availability/v1/availabilitypbv1",
    proto = ":availabilitypbv1_proto",
    visibility = ["//visibility:public"],
    deps = [
        "//protobuf/freebusy/shared/v1:sharedpbv1_go_proto",
        "@grpc_mcp_gateway//mcp/protobuf",
        "@org_golang_google_genproto_googleapis_api//annotations",
    ],
)

go_library(
    name = "availabilitypbv1",
    embed = [":availabilitypbv1_go_proto"],
    importpath = "github.com/oh-tarnished/freebusy/generated/go/availability/v1/availabilitypbv1",
    visibility = ["//visibility:public"],
)
