load("@protobuf//bazel:proto_library.bzl", "proto_library")
load("@rules_go//go:def.bzl", "go_library")
load("@rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "identitypbv1_proto",
    srcs = [
        "identity.proto",
        "identity_service.proto",
    ],
    strip_import_prefix = "/protobuf",
    visibility = ["//visibility:public"],
    deps = [
        "@googleapis//google/api:annotations_proto",
        "@googleapis//google/api:client_proto",
        "@googleapis//google/api:field_behavior_proto",
        "@googleapis//google/api:resource_proto",
        "@grpc_mcp_gateway//proto/mcp/protobuf:mcppb_proto",
        "@protobuf//:field_mask_proto",
        "@protobuf//:timestamp_proto",
    ],
)

go_proto_library(
    name = "identitypbv1_go_proto",
    compilers = [
        "@rules_go//proto:go_proto",
        "@rules_go//proto:go_grpc_v2",
    ],
    importpath = "github.com/oh-tarnished/freebusy/gen/identity/v1/identitypbv1",
    proto = ":identitypbv1_proto",
    visibility = ["//visibility:public"],
    deps = [
        "@grpc_mcp_gateway//mcp/protobuf",
        "@org_golang_google_genproto_googleapis_api//annotations",
    ],
)

go_library(
    name = "identitypbv1",
    embed = [":identitypbv1_go_proto"],
    importpath = "github.com/oh-tarnished/freebusy/gen/identity/v1/identitypbv1",
    visibility = ["//visibility:public"],
)
