load("@protobuf//bazel:proto_library.bzl", "proto_library")
load("@rules_go//go:def.bzl", "go_library")
load("@rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "sharedpbv1_proto",
    srcs = [
        "enums.proto",
        "options.proto",
        "types.proto",
    ],
    strip_import_prefix = "/protobuf",
    visibility = ["//visibility:public"],
    deps = [
        "@googleapis//google/api:field_behavior_proto",
        "@protobuf//:timestamp_proto",
    ],
)

go_proto_library(
    name = "sharedpbv1_go_proto",
    compilers = ["@rules_go//proto:go_proto"],
    importpath = "github.com/oh-tarnished/freebusy/generated/go/shared/v1/sharedpbv1",
    proto = ":sharedpbv1_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "sharedpbv1",
    embed = [":sharedpbv1_go_proto"],
    importpath = "github.com/oh-tarnished/freebusy/generated/go/shared/v1/sharedpbv1",
    visibility = ["//visibility:public"],
)
